k8s/driver-pool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-pool-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: driver-pool
  template:
    metadata:
      labels:
        component: driver-pool
    spec:
      containers:
        - name: driver-pool
          image: alexanderbudnikov/driver-pool:latest
