k8s/driver-pool-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-pool-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: driver-pool
  ports:
    - port: 5000
      targetPort: 5000
