k8s/kafka-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kafka
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka-port
    - port: 2181
      targetPort: 2181
      name: zookeeper-port
